--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "atom-package-deps": "*"
+  },
   "package-deps": [
     "atom-beautify",
     "atom-ternjs",
