--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "uuid": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^2.13.1",
-    "babel-eslint": "6.0.5",
-    "eslint-plugin-babel": "3.3.0"
+    "atom-package-deps": "4.6.0"
   },
   "package-deps": [
     "atom-beautify",
