--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "re-re-re-react",
   "main": "./lib/re-re-re-react",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Test",
   "private": false,
-  "keywords": ["javascript", "react"],
+  "keywords": [
+    "javascript",
+    "react"
+  ],
   "activationCommands": {
     "atom-workspace": "re-re-re-react:toggle"
   },
