--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "re-re-re-react",
   "main": "./lib/re-re-re-react",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Test",
   "private": false,
   "keywords": [
@@ -19,8 +19,7 @@
   "dependencies": {
     "atom-package-deps": "4.6.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "package-deps": [
     "atom-beautify",
     "atom-ternjs",
