--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-re-re-react",
-  "main": "./lib/re-re-re-react",
+  "main": "./lib/index",
   "version": "2.4.0",
   "description": "Test",
   "private": false,
@@ -14,7 +14,11 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-    "atom-package-deps": "4.6.0"
+    "atom-package-deps": "4.6.0",
+    "babel-core": "^6.24.0",
+    "babel-plugin-rewire": "^1.0.0",
+    "babel-register": "^6.24.0",
+    "deepmerge": "^1.3.2"
   },
   "devDependencies": {},
   "package-deps": [
