--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "re-re-re-react",
   "main": "./lib/re-re-re-react",
   "version": "2.9.0",
-  "description": "Test",
+  "description": "Make Atom an editing powerhouse for React.",
   "private": false,
   "keywords": [
     "javascript",
